--- a/plugins/ern_v0.2.0+/react-native-code-push_v1.17.0+/config.json
+++ b/plugins/ern_v0.2.0+/react-native-code-push_v1.17.0+/config.json
@@ -4,7 +4,7 @@
   },
   "ios": {
     "copy": [
-      { "source": "ios/**", "dest": "ElectrodeContainer/Libraries/CodePush" }
+      { "source": "ios/**", "dest": "{{{projectName}}}/Libraries/CodePush" }
     ],
     "pbxproj": {
       "addStaticLibrary": [
@@ -14,7 +14,7 @@
         { "path": "CodePush/CodePush.xcodeproj", "group": "Libraries", "staticLibs": [ { "name": "libCodePush.a", "target": "CodePush" } ] }
       ],
       "addHeaderSearchPath": [
-        "\"$(SRCROOT)/ElectrodeContainer/Libraries/CodePush/**\""
+        "\"$(SRCROOT)/{{{projectName}}}/Libraries/CodePush/**\""
       ]
     }
   }
