--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,7 @@
       "react-native-code-push@1.17.1-beta",
       "react-native-stack-tracer@0.1.1",
       "react-native-vector-icons@4.0.0",
+      "react-native-maps@0.15.2",
       "@walmart/react-native-electrode-bridge@1.5.0"
     ],
     "targetJsDependencies": [
