--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,7 @@
       "react-native-stack-tracer@0.1.1",
       "react-native-vector-icons@4.0.0",
       "react-native-maps@0.15.2",
+      "react-native-linear-gradient@2.0.0",
       "@walmart/react-native-electrode-bridge@1.5.0"
     ],
     "targetJsDependencies": [
