iOS: Added header that needed for bridge into config.json

--- a/plugins/ern_v0.2.0+/@walmart:react-native-electrode-bridge_v1.5.0+/config.json
+++ b/plugins/ern_v0.2.0+/@walmart:react-native-electrode-bridge_v1.5.0+/config.json
@@ -6,6 +6,11 @@
     "copy": [
       { "source": "ios/ElectrodeReactNativeBridge/*", "dest": "{{{projectName}}}/ElectrodeReactNativeBridge" }
     ],
+    "containerPublicHeader":["ElectrodeBridgeHolder.h", 
+                             "ElectrodeBridgeProtocols.h",
+                             "ElectrodeBridgeEvent.h",
+                             "ElectrodeBridgeRequest.h"
+    ],
     "replaceInFile": [
       {
         "path": "{{{projectName}}}/ElectrodeReactNativeBridge/ElectrodeBridgeMessage.m",
