Added ElectrodeBridgeConfig.h to config.json

--- a/plugins/ern_v0.2.0+/@walmart:react-native-electrode-bridge_v1.5.0+/config.json
+++ b/plugins/ern_v0.2.0+/@walmart:react-native-electrode-bridge_v1.5.0+/config.json
@@ -9,7 +9,8 @@
     "containerPublicHeader":["ElectrodeBridgeHolder.h", 
                              "ElectrodeBridgeProtocols.h",
                              "ElectrodeBridgeEvent.h",
-                             "ElectrodeBridgeRequest.h"
+                             "ElectrodeBridgeRequest.h",
+                             "ElectrodeBridgeConfig.h"
     ],
     "replaceInFile": [
       {
