--- a/plugins/ern_v0.2.0+/@walmart:react-native-electrode-bridge_v1.5.0+/config.json
+++ b/plugins/ern_v0.2.0+/@walmart:react-native-electrode-bridge_v1.5.0+/config.json
@@ -36,7 +36,7 @@
         { "path": "ElectrodeReactNativeBridge/ElectrodeRequestRegistrar.h", "group": "ElectrodeReactNativeBridge"},
         { "path": "ElectrodeReactNativeBridge/ElectrodeReactNativeBridge.h", "group": "ElectrodeReactNativeBridge"},
         { "path": "ElectrodeReactNativeBridge/ElectrodeBridgeResponse.h", "group": "ElectrodeReactNativeBridge"},
-        { "path": "ElectrodeBridgeConfig.h", "group": "ElectrodeContainer", "public": true}
+        { "path": "ElectrodeContainer/ElectrodeBridgeConfig.h", "group": "ElectrodeContainer", "public": true}
       ],
       "addSource": [
         { "path": "ElectrodeReactNativeBridge/ElectrodeObject.swift", "group": "ElectrodeReactNativeBridge" },
@@ -62,7 +62,7 @@
         { "path": "ElectrodeReactNativeBridge/ElectrodeEventRegistrar.m", "group": "ElectrodeReactNativeBridge" },
         { "path": "ElectrodeReactNativeBridge/ElectrodeRequestDispatcher.m", "group": "ElectrodeReactNativeBridge" },
         { "path": "ElectrodeReactNativeBridge/ElectrodeRequestRegistrar.m", "group": "ElectrodeReactNativeBridge" },
-        { "path": "ElectrodeBridgeConfig.h", "group": "ElectrodeContainer"}
+        { "path": "ElectrodeContainer/ElectrodeBridgeConfig.h", "group": "ElectrodeContainer"}
       ]
     }
   }
