--- a/plugins/ern_v0.2.0+/react-native-linear-gradient_v2.0.0+/config.json
+++ b/plugins/ern_v0.2.0+/react-native-linear-gradient_v2.0.0+/config.json
@@ -2,5 +2,19 @@
   "android": {
     "root": "",
     "moduleName": "android"
+  },
+  "ios": {
+    "copy": [
+      { "source": "BVLinearGradient", "dest": "{{{projectName}}}/Libraries/BVLinearGradient" },
+      { "source": "BVLinearGradient.xcodeproj", "dest": "{{{projectName}}}/Libraries/BVLinearGradient.xcodeproj"}
+    ],
+    "pbxproj": {
+       "addProject": [
+        { "path": "BVLinearGradient/BVLinearGradient.xcodeproj", "group": "Libraries", "staticLibs": [ { "name": "libBVLinearGradient.a", "target": "BVLinearGradient" } ] }
+      ],
+      "addHeaderSearchPath": [
+        "\"$(SRCROOT)/{{{projectName}}}/Libraries/BVLinearGradient/**\""
+      ]
+    }
   }
 }
