ios: modified config.json for react-nativ-linear-gradient

--- a/plugins/ern_v0.2.0+/react-native-linear-gradient_v2.0.0+/config.json
+++ b/plugins/ern_v0.2.0+/react-native-linear-gradient_v2.0.0+/config.json
@@ -6,7 +6,7 @@
   "ios": {
     "copy": [
       { "source": "BVLinearGradient", "dest": "{{{projectName}}}/Libraries/BVLinearGradient" },
-      { "source": "BVLinearGradient.xcodeproj", "dest": "{{{projectName}}}/Libraries/BVLinearGradient.xcodeproj"}
+      { "source": "BVLinearGradient.xcodeproj", "dest": "{{{projectName}}}/Libraries/BVLinearGradient"}
     ],
     "pbxproj": {
        "addProject": [
