Add support of react-native-keep-awake for Android

--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,7 @@
       "react-native-vector-icons@4.0.0",
       "react-native-maps@0.15.2",
       "react-native-linear-gradient@2.0.0",
+      "react-native-keep-awake@2.0.3",
       "@walmart/react-native-electrode-bridge@1.5.0"
     ],
     "targetJsDependencies": [
