--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,10 @@
       "react-native-code-push@1.17.1-beta",
       "react-native-stack-tracer@0.1.1",
       "react-native-vector-icons@4.0.0",
+      "react-native-vector-icons@4.0.0",
+      "react-native-maps@0.15.2",
+      "react-native-linear-gradient@2.0.0",
+      "react-native-keep-awake@2.0.3",
       "@walmart/react-native-electrode-bridge@1.5.0"
     ],
     "targetJsDependencies": [
