--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,8 @@
       "react-native-maps@0.15.2",
       "react-native-linear-gradient@2.0.0",
       "react-native-keep-awake@2.0.3",
-      "@walmart/react-native-electrode-bridge@1.5.0"
+      "@walmart/react-native-electrode-bridge@1.5.0",
+      "react-native-fbsdk@0.5.0"
     ],
     "targetJsDependencies": [
       "react@~15.4.1"
