--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
       "@walmart/react-native-electrode-bridge@1.5.0"
     ],
     "targetJsDependencies": [
-      "react@~15.4.1"
+      "react@15.4.2"
     ]
   },
   {
@@ -36,7 +36,7 @@
       "react-native-fbsdk@0.5.0"
     ],
     "targetJsDependencies": [
-      "react@~15.4.1"
+      "react@15.4.2"
     ]
   }
 ]
