--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,8 @@
       "react-native-llphotoassets@0.0.1",
       "react-native-lluploader@0.0.1",
       "react-native-llimageview@0.0.3",
-      "@walmart/react-native-electrode-bridge@1.5.0"
+      "@walmart/react-native-electrode-bridge@1.5.0",
+      "react-native-fbsdk@0.5.0"
     ],
     "targetJsDependencies": [
       "react@15.4.2"
