Add fb sdk plugin

--- a/plugins/ern_v0.2.0+/react-native-fbsdk_v0.5.0+/config.json
+++ b/plugins/ern_v0.2.0+/react-native-fbsdk_v0.5.0+/config.json
@@ -5,5 +5,18 @@
     "dependencies": [
       "com.facebook.android:facebook-android-sdk:4.+"
     ]
+  },
+  "ios": {
+    "copy": [
+      { "source": "ios/**", "dest": "{{{projectName}}}/Libraries/RCTFBSDK" }
+    ],
+    "pbxproj": {
+       "addProject": [
+        { "path": "RCTFBSDK/RCTFBSDK.xcodeproj", "group": "Libraries", "staticLibs": [ { "name": "libRCTFBSDK.a", "target": "RCTFBSDK" } ] }
+      ],
+      "addHeaderSearchPath": [
+        "\"$(SRCROOT)/{{{projectName}}}/Libraries/RCTFBSDK/**\""
+      ]
+    }
   }
 }
