Fix react-native-maps config for 0.13.1

--- a/plugins/ern_v0.2.0+/react-native-maps_v0.14.0+/config.json
+++ b/plugins/ern_v0.2.0+/react-native-maps_v0.14.0+/config.json
@@ -9,7 +9,7 @@
   },
   "ios": {
     "copy": [
-      { "source": "ios/**", "dest": "{{{projectName}}}/Libraries/AirMaps" }
+      { "source": "lib/ios/**", "dest": "{{{projectName}}}/Libraries/AirMaps" }
     ],
     "pbxproj": {
        "addProject": [
