Mark non configurable plugins as such

--- a/plugins/ern_v0.2.0+/react-native-fbsdk_v0.5.0+/config.json
+++ b/plugins/ern_v0.2.0+/react-native-fbsdk_v0.5.0+/config.json
@@ -7,6 +7,9 @@
     ]
   },
   "ios": {
+    "pluginHook": {
+      "configurable": false
+    },
     "copy": [
       { "source": "ios/**", "dest": "{{{projectName}}}/Libraries/RCTFBSDK" }
     ],
