--- a/plugins/ern_v0.2.0+/react-native-linear-gradient_v2.0.0+/config.json
+++ b/plugins/ern_v0.2.0+/react-native-linear-gradient_v2.0.0+/config.json
@@ -4,6 +4,9 @@
     "moduleName": "android"
   },
   "ios": {
+    "pluginHook": {
+      "configurable": false
+    },
     "copy": [
       { "source": "BVLinearGradient", "dest": "{{{projectName}}}/Libraries/BVLinearGradient" },
       { "source": "BVLinearGradient.xcodeproj", "dest": "{{{projectName}}}/Libraries/BVLinearGradient"}
