--- a/plugins/ern_v0.2.0+/react-native-llphotoassets_v0.0.1+/config.json
+++ b/plugins/ern_v0.2.0+/react-native-llphotoassets_v0.0.1+/config.json
@@ -1,5 +1,8 @@
 {
   "ios": {
+    "pluginHook": {
+      "configurable": false
+    },
     "copy": [
       { "source": "ios/**", "dest": "{{{projectName}}}/Libraries/LLPhotoAssets" }
     ],
