--- a/plugins/ern_v0.2.0+/react-native-keep-awake_v2.0.0+/config.json
+++ b/plugins/ern_v0.2.0+/react-native-keep-awake_v2.0.0+/config.json
@@ -4,6 +4,9 @@
     "moduleName": "android"
   },
   "ios": {
+    "pluginHook": {
+      "configurable": false
+    },
     "copy": [
       { "source": "ios/**", "dest": "{{{projectName}}}/Libraries/KCKeepAwake" }
     ],
