--- a/plugins/ern_v0.2.0+/react-native-maps_v0.14.0+/config.json
+++ b/plugins/ern_v0.2.0+/react-native-maps_v0.14.0+/config.json
@@ -8,6 +8,9 @@
     ]
   },
   "ios": {
+    "pluginHook": {
+      "configurable": false
+    },
     "copy": [
       { "source": "lib/ios/**", "dest": "{{{projectName}}}/Libraries/AirMaps" }
     ],
