--- a/plugins/ern_v0.2.0+/react-native-maps_v0.13.1+/config.json
+++ b/plugins/ern_v0.2.0+/react-native-maps_v0.13.1+/config.json
@@ -1,7 +1,7 @@
 {
   "android": {
-    "root": "lib",
-    "moduleName": "android",
+    "root": "android",
+    "moduleName": "lib",
     "dependencies": [
       "com.google.android.gms:play-services-base:10.0.1",
       "com.google.android.gms:play-services-maps:10.0.1"
