--- a/manifest.json
+++ b/manifest.json
@@ -34,7 +34,8 @@
       "react-native-lluploader@0.0.2",
       "react-native-llimageview@0.0.5",
       "@walmart/react-native-electrode-bridge@1.5.0",
-      "react-native-fbsdk@0.5.0"
+      "react-native-fbsdk@0.5.0",
+      "react-native-location@0.27.0"
     ],
     "targetJsDependencies": [
       "react@15.4.2"
@@ -54,7 +55,8 @@
       "react-native-lluploader@0.0.2",
       "react-native-llimageview@0.0.5",
       "@walmart/react-native-electrode-bridge@1.5.0",
-      "react-native-fbsdk@0.5.0"
+      "react-native-fbsdk@0.5.0",
+      "react-native-location@0.27.0"      
     ],
     "targetJsDependencies": [
       "react@15.4.2"
@@ -74,7 +76,8 @@
       "react-native-lluploader@0.0.2",
       "react-native-llimageview@0.0.5",
       "@walmart/react-native-electrode-bridge@1.5.1",
-      "react-native-fbsdk@0.5.0"
+      "react-native-fbsdk@0.5.0",
+      "react-native-location@0.27.0"
     ],
     "targetJsDependencies": [
       "react@15.4.2"
