--- a/plugins/ern_v0.3.0+/react-native-location_v0.27.0+/config.json
+++ b/plugins/ern_v0.3.0+/react-native-location_v0.27.0+/config.json
@@ -4,8 +4,8 @@
         "configurable": false
       },
       "copy": [
-        { "source": "RNLocation.h", "dest": "{{{projectName}}}/Libraries/RNLocation/RNLocation.h" },
-        { "source": "RNLocation.m", "dest": "{{{projectName}}}/Libraries/RNLocation/RNLocation.m" },
+        { "source": "RNLocation.h", "dest": "{{{projectName}}}/Libraries/RNLocation" },
+        { "source": "RNLocation.m", "dest": "{{{projectName}}}/Libraries/RNLocation" },
         { "source": "RNLocation.xcodeproj", "dest": "{{{projectName}}}/Libraries/RNLocation"}
       ],
       "pbxproj": {
