Update react-native-maps version for 0.7.x

--- a/manifest.json
+++ b/manifest.json
@@ -30,7 +30,8 @@
     "platformVersion": "0.7.x",
     "targetNativeDependencies": [
       "react-native@0.48.3",
-      "react-native-electrode-bridge@1.5.9"
+      "react-native-electrode-bridge@1.5.9",
+      "react-native-maps@0.16.4"
     ],
     "targetJsDependencies": [
     ]
