Update react-native-vector-icons version for 0.7.x

--- a/manifest.json
+++ b/manifest.json
@@ -31,7 +31,8 @@
     "targetNativeDependencies": [
       "react-native@0.48.3",
       "react-native-electrode-bridge@1.5.9",
-      "react-native-maps@0.16.4"
+      "react-native-maps@0.16.4",
+      "react-native-vector-icons@4.4.0"
     ],
     "targetJsDependencies": [
     ]
@@ -40,7 +41,9 @@
     "platformVersion": "1000.0.0",
     "targetNativeDependencies": [
       "react-native@0.48.3",
-      "react-native-electrode-bridge@1.5.9"
+      "react-native-electrode-bridge@1.5.9",
+      "react-native-maps@0.16.4",
+      "react-native-vector-icons@4.4.0"
     ],
     "targetJsDependencies": [
     ]
