--- a/plugins/ern_v0.5.0+/react-native-vector-icons_v4.0.0+/config.json
+++ b/plugins/ern_v0.5.0+/react-native-vector-icons_v4.0.0+/config.json
@@ -1,4 +1,9 @@
 {
+  "android": {
+    "copy": [
+      { "source": "Fonts/*", "dest": "lib/src/main/assets/fonts" }
+    ]
+  },
   "ios": {
     "pluginHook": {
         "configurable": false
