Add latest version of CodePush plugin support

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
       "react-native-lluploader@0.0.3",
       "react-native-llimageview@0.0.5",
       "react-native-electrode-bridge@1.5.5",
-      "react-native-location@0.27.0"      
+      "react-native-location@0.27.0"
     ],
     "targetJsDependencies": [
     ]
@@ -33,7 +33,8 @@
       "react-native-electrode-bridge@1.5.9",
       "react-native-maps@0.16.4",
       "react-native-vector-icons@4.4.0",
-      "react-native-linear-gradient@2.3.0"
+      "react-native-linear-gradient@2.3.0",
+      "react-native-code-push@5.1.3-beta"
     ],
     "targetJsDependencies": [
     ]
@@ -45,7 +46,8 @@
       "react-native-electrode-bridge@1.5.9",
       "react-native-maps@0.16.4",
       "react-native-vector-icons@4.4.0",
-      "react-native-linear-gradient@2.3.0"
+      "react-native-linear-gradient@2.3.0",
+      "react-native-code-push@5.1.3-beta"
     ],
     "targetJsDependencies": [
     ]
