--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,7 @@
       "react-native-electrode-bridge@1.5.9"
     ],
     "targetJsDependencies": [
+      "react@16.0.0-alpha.12"
     ]
   },
   {
@@ -37,6 +38,7 @@
       "react-native-code-push@5.1.3-beta"
     ],
     "targetJsDependencies": [
+      "react@16.0.0-alpha.12"
     ]
   },
   {
@@ -50,6 +52,7 @@
       "react-native-code-push@5.1.3-beta"
     ],
     "targetJsDependencies": [
+      "react@16.0.0-alpha.12"
     ]
   }
 ]
