--- a/manifest.json
+++ b/manifest.json
@@ -44,7 +44,7 @@
   {
     "platformVersion": "1000.0.0",
     "targetNativeDependencies": [
-      "react-native@0.48.3",
+      "react-native@0.49.0",
       "react-native-electrode-bridge@1.5.9",
       "react-native-maps@0.16.4",
       "react-native-vector-icons@4.4.0",
@@ -52,7 +52,7 @@
       "react-native-code-push@5.1.3-beta"
     ],
     "targetJsDependencies": [
-      "react@16.0.0-alpha.12"
+      "react@16.0.0-beta.5"
     ]
   }
 ]
