--- a/manifest.json
+++ b/manifest.json
@@ -49,7 +49,8 @@
       "react-native-maps@0.16.4",
       "react-native-vector-icons@4.4.0",
       "react-native-linear-gradient@2.3.0",
-      "react-native-code-push@5.1.3-beta"
+      "react-native-code-push@5.1.3-beta",
+      "react-native-keep-awake@2.0.5"
     ],
     "targetJsDependencies": [
       "react@16.0.0-beta.5"
