--- a/manifest.json
+++ b/manifest.json
@@ -56,6 +56,20 @@
     ]
   },
   {
+    "platformVersion": "0.9.x",
+    "targetNativeDependencies": [
+      "react-native@0.49.3",
+      "react-native-electrode-bridge@1.5.9",
+      "react-native-maps@0.16.4",
+      "react-native-vector-icons@4.4.2",
+      "react-native-linear-gradient@2.3.0",
+      "react-native-code-push@5.1.3-beta"
+    ],
+    "targetJsDependencies": [
+      "react@16.0.0-beta.5"
+    ]
+  },
+  {
     "platformVersion": "1000.0.0",
     "targetNativeDependencies": [
       "react-native@0.49.3",
