:bug: Fix ios react-native-code-push 5.1.1+ config

--- a/plugins/ern_v0.5.0+/react-native-code-push_v5.1.1+/config.json
+++ b/plugins/ern_v0.5.0+/react-native-code-push_v5.1.1+/config.json
@@ -7,7 +7,7 @@
   },
   "ios": {
     "copy": [
-      { "source": "ios/**", "dest": "{{{projectName}}}/Libraries/CodePush" }
+      { "source": "ios/*", "dest": "{{{projectName}}}/Libraries/CodePush" }
     ],
     "pbxproj": {
       "addStaticLibrary": [
