--- a/manifest.json
+++ b/manifest.json
@@ -77,7 +77,8 @@
       "react-native-maps@0.17.0",
       "react-native-vector-icons@4.4.2",
       "react-native-linear-gradient@2.3.0",
-      "react-native-code-push@5.1.3-beta"
+      "react-native-code-push@5.1.3-beta",
+      "react-native-android-settings-library@1.0.3"
     ],
     "targetJsDependencies": [
       "react@16.0.0"
@@ -91,7 +92,8 @@
       "react-native-maps@0.16.4",
       "react-native-vector-icons@4.4.2",
       "react-native-linear-gradient@2.3.0",
-      "react-native-code-push@5.1.3-beta"
+      "react-native-code-push@5.1.3-beta",
+      "react-native-android-settings-library@1.0.3"
     ],
     "targetJsDependencies": [
       "react@16.0.0-beta.5"
