--- a/manifest.json
+++ b/manifest.json
@@ -93,7 +93,10 @@
       "react-native-vector-icons@4.4.2",
       "react-native-linear-gradient@2.3.0",
       "react-native-code-push@5.2.1",
-      "react-native-android-settings-library@1.0.3"
+      "react-native-android-settings-library@1.0.3",
+      "react-native-llimageview@0.0.7",
+      "react-native-lluploader@0.1.0",
+      "react-native-llphotoassets@0.0.2"
     ],
     "targetJsDependencies": [
       "react@16.0.0"
@@ -108,7 +111,10 @@
       "react-native-vector-icons@4.4.2",
       "react-native-linear-gradient@2.3.0",
       "react-native-code-push@5.1.3-beta",
-      "react-native-android-settings-library@1.0.3"
+      "react-native-android-settings-library@1.0.3",
+      "react-native-llimageview@0.0.7",
+      "react-native-lluploader@0.1.0",
+      "react-native-llphotoassets@0.0.2"
     ],
     "targetJsDependencies": [
       "react@16.0.0"
