--- a/manifest.json
+++ b/manifest.json
@@ -106,12 +106,12 @@
   {
     "platformVersion": "1000.0.0",
     "targetNativeDependencies": [
-      "react-native@0.51.0",
+      "react-native@0.52.2",
       "react-native-electrode-bridge@1.5.9",
-      "react-native-maps@0.16.4",
-      "react-native-vector-icons@4.4.2",
-      "react-native-linear-gradient@2.3.0",
-      "react-native-code-push@5.1.3-beta",
+      "react-native-maps@0.19.0",
+      "react-native-vector-icons@4.5.0",
+      "react-native-linear-gradient@2.4.0",
+      "react-native-code-push@5.2.1",
       "react-native-android-settings-library@1.0.3",
       "react-native-llimageview@0.0.7",
       "react-native-lluploader@0.1.0",
