--- a/manifest.json
+++ b/manifest.json
@@ -133,7 +133,8 @@
       "react-native-android-settings-library@1.0.3",
       "react-native-llimageview@0.0.10",
       "react-native-lluploader@0.1.3",
-      "react-native-llphotoassets@0.0.2"
+      "react-native-llphotoassets@0.0.2",
+      "react-native-svg@6.2.1"
     ],
     "targetJsDependencies": [
       "react@16.2.0"
@@ -151,7 +152,8 @@
       "react-native-android-settings-library@1.0.3",
       "react-native-llimageview@0.0.10",
       "react-native-lluploader@0.1.3",
-      "react-native-llphotoassets@0.0.2"
+      "react-native-llphotoassets@0.0.2",
+      "react-native-svg@6.2.1"
     ],
     "targetJsDependencies": [
       "react@16.2.0"
