--- a/manifest.json
+++ b/manifest.json
@@ -134,7 +134,8 @@
       "react-native-llimageview@0.0.10",
       "react-native-lluploader@0.1.3",
       "react-native-llphotoassets@0.0.2",
-      "react-native-svg@6.2.1"
+      "react-native-svg@6.2.1",
+      "react-native-exif@0.1.7"
     ],
     "targetJsDependencies": [
       "react@16.2.0"
@@ -153,7 +154,8 @@
       "react-native-llimageview@0.0.10",
       "react-native-lluploader@0.1.3",
       "react-native-llphotoassets@0.0.2",
-      "react-native-svg@6.2.1"
+      "react-native-svg@6.2.1",
+      "react-native-exif@0.1.7"
     ],
     "targetJsDependencies": [
       "react@16.2.0"
