--- a/manifest.json
+++ b/manifest.json
@@ -135,7 +135,8 @@
       "react-native-lluploader@0.1.3",
       "react-native-llphotoassets@0.0.2",
       "react-native-svg@6.2.1",
-      "react-native-exif@0.1.7"
+      "react-native-exif@0.1.7",
+      "react-native-view-shot@2.3.0"
     ],
     "targetJsDependencies": [
       "react@16.2.0"
@@ -155,7 +156,8 @@
       "react-native-lluploader@0.1.3",
       "react-native-llphotoassets@0.0.2",
       "react-native-svg@6.2.1",
-      "react-native-exif@0.1.7"
+      "react-native-exif@0.1.7",
+      "react-native-view-shot@2.3.0"
     ],
     "targetJsDependencies": [
       "react@16.2.0"
