--- a/manifest.json
+++ b/manifest.json
@@ -143,6 +143,27 @@
     ]
   },
   {
+    "platformVersion": "0.14.x",
+    "targetNativeDependencies": [
+      "react-native@0.53.0",
+      "react-native-electrode-bridge@1.5.9",
+      "react-native-maps@0.20.1",
+      "react-native-vector-icons@4.5.0",
+      "react-native-linear-gradient@2.4.0",
+      "react-native-code-push@5.2.1",
+      "react-native-android-settings-library@1.0.3",
+      "react-native-llimageview@0.0.10",
+      "react-native-lluploader@0.1.3",
+      "react-native-llphotoassets@0.0.2",
+      "react-native-svg@6.2.1",
+      "react-native-exif@0.1.7",
+      "react-native-view-shot@2.3.0"
+    ],
+    "targetJsDependencies": [
+      "react@16.2.0"
+    ]
+  },
+  {
     "platformVersion": "1000.0.0",
     "targetNativeDependencies": [
       "react-native@0.53.0",
