--- a/manifest.json
+++ b/manifest.json
@@ -205,7 +205,8 @@
       "react-native-exif@0.1.8",
       "react-native-view-shot@2.3.0",
       "react-native-camera@1.0.2",
-      "react-native-permissions@1.1.1"
+      "react-native-permissions@1.1.1",
+      "react-native-keep-awake@3.0.0"
     ],
     "targetJsDependencies": [
       "react@16.3.0-alpha.1"
