--- a/manifest.json
+++ b/manifest.json
@@ -206,7 +206,8 @@
       "react-native-view-shot@2.3.0",
       "react-native-camera@1.0.2",
       "react-native-permissions@1.1.1",
-      "react-native-keep-awake@3.0.0"
+      "react-native-keep-awake@3.0.0",
+      "react-native-location@0.27.0"
     ],
     "targetJsDependencies": [
       "react@16.3.0-alpha.1"
