--- a/plugins/ern_v0.13.0+/react-native-fbsdk_v0.5.0+/config.json
+++ b/plugins/ern_v0.13.0+/react-native-fbsdk_v0.5.0+/config.json
@@ -11,6 +11,12 @@
       { "source": "ios/**", "dest": "{{{projectName}}}/Libraries/RCTFBSDK" }
     ],
     "pbxproj": {
+      "addFrameworkReference": [
+          "../../../../Documents/FacebookSDK/Bolts.framework",
+          "../../../../Documents/FacebookSDK/FBSDKCoreKit.framework",
+          "../../../../Documents/FacebookSDK/FBSDKLoginKit.framework",
+          "../../../../Documents/FacebookSDK/FBSDKShareKit.framework"
+        ],
        "addProject": [
         { "path": "RCTFBSDK/RCTFBSDK.xcodeproj", "group": "Libraries", "staticLibs": [ { "name": "libRCTFBSDK.a", "target": "RCTFBSDK" } ] }
       ],
