--- a/manifest.json
+++ b/manifest.json
@@ -232,7 +232,8 @@
       "react-native-permissions@1.1.1",
       "react-native-keep-awake@3.0.0",
       "react-native-location@0.27.0",
-      "react-native-fbsdk@0.7.0"
+      "react-native-fbsdk@0.7.0",
+      "react-native-electrode-ota@0.0.1"
     ],
     "targetJsDependencies": [
       "react@16.3.0-alpha.1"
