Fix react-native-electrode-ota plugin

--- a/plugins/ern_v0.15.0+/react-native-electrode-ota_v0.0.1+/config.json
+++ b/plugins/ern_v0.15.0+/react-native-electrode-ota_v0.0.1+/config.json
@@ -1,10 +1,13 @@
 {
   "android": {
-    "moduleName": "app"
+    "moduleName": "app",
+    "dependencies": [
+      "com.nimbusds:nimbus-jose-jwt:5.1"
+    ]
   },
   "ios": {
     "copy": [
-      { "source": "ios/**", "dest": "{{{projectName}}}/Libraries/CodePush" }
+      { "source": "ios/*", "dest": "{{{projectName}}}/Libraries/CodePush" }
     ],
     "pbxproj": {
       "addStaticLibrary": [
