add support for config parameter
add entry in manifest file

--- a/manifest.json
+++ b/manifest.json
@@ -287,7 +287,8 @@
       "react-native-keep-awake@3.0.1",
       "react-native-location@0.27.0",
       "react-native-fbsdk@0.7.0",
-      "react-native-electrode-ota@0.0.1"
+      "react-native-electrode-ota@0.0.1",
+      "react-native-image-picker@0.26.7"
     ],
     "targetJsDependencies": [
       "react@16.3.1"
@@ -314,7 +315,8 @@
       "react-native-keep-awake@3.0.1",
       "react-native-location@0.27.0",
       "react-native-fbsdk@0.7.0",
-      "react-native-electrode-ota@0.0.1"
+      "react-native-electrode-ota@0.0.1",
+      "react-native-image-picker@0.26.7"
     ],
     "targetJsDependencies": [
       "react@16.3.1"
