Add support for react-native-search-bar

--- a/manifest.json
+++ b/manifest.json
@@ -233,7 +233,8 @@
       "react-native-keep-awake@3.0.1",
       "react-native-location@0.27.0",
       "react-native-fbsdk@0.7.0",
-      "react-native-electrode-ota@0.0.1"
+      "react-native-electrode-ota@0.0.1",
+      "react-native-search-bar@3.4.2"
     ],
     "targetJsDependencies": [
       "react@16.3.1"
@@ -260,7 +261,8 @@
       "react-native-keep-awake@3.0.1",
       "react-native-location@0.27.0",
       "react-native-fbsdk@0.7.0",
-      "react-native-electrode-ota@0.0.1"
+      "react-native-electrode-ota@0.0.1",
+      "react-native-search-bar@3.4.2"
     ],
     "targetJsDependencies": [
       "react@16.3.1"
@@ -288,7 +290,8 @@
       "react-native-location@0.27.0",
       "react-native-fbsdk@0.7.0",
       "react-native-electrode-ota@0.0.1",
-      "react-native-image-picker@0.26.10"
+      "react-native-image-picker@0.26.10",
+      "react-native-search-bar@3.4.2"
     ],
     "targetJsDependencies": [
       "react@16.3.1"
@@ -316,7 +319,8 @@
       "react-native-location@0.27.0",
       "react-native-fbsdk@0.7.0",
       "react-native-electrode-ota@0.0.1",
-      "react-native-image-picker@0.26.10"
+      "react-native-image-picker@0.26.10",
+      "react-native-search-bar@3.4.2"
     ],
     "targetJsDependencies": [
       "react@16.3.1"
@@ -344,7 +348,8 @@
       "react-native-location@0.27.0",
       "react-native-fbsdk@0.7.0",
       "react-native-electrode-ota@0.0.1",
-      "react-native-image-picker@0.26.10"
+      "react-native-image-picker@0.26.10",
+      "react-native-search-bar@3.4.2"
     ],
     "targetJsDependencies": [
       "react@16.3.1"
@@ -372,7 +377,8 @@
       "react-native-location@0.27.0",
       "react-native-fbsdk@0.7.0",
       "react-native-electrode-ota@0.0.1",
-      "react-native-image-picker@0.26.10"
+      "react-native-image-picker@0.26.10",
+      "react-native-search-bar@3.4.2"
     ],
     "targetJsDependencies": [
       "react@16.3.1"
@@ -400,7 +406,8 @@
       "react-native-location@0.27.0",
       "react-native-fbsdk@0.7.0",
       "react-native-electrode-ota@0.0.1",
-      "react-native-image-picker@0.26.10"
+      "react-native-image-picker@0.26.10",
+      "react-native-search-bar@3.4.2"
     ],
     "targetJsDependencies": [
       "react@16.3.1"
@@ -428,7 +435,8 @@
       "react-native-location@0.27.0",
       "react-native-fbsdk@0.7.0",
       "react-native-electrode-ota@0.0.1",
-      "react-native-image-picker@0.26.10"
+      "react-native-image-picker@0.26.10",
+      "react-native-search-bar@3.4.2"
     ],
     "targetJsDependencies": [
       "react@16.4.1"
@@ -456,7 +464,8 @@
       "react-native-location@0.27.0",
       "react-native-fbsdk@0.7.0",
       "react-native-electrode-ota@0.0.1",
-      "react-native-image-picker@0.26.10"
+      "react-native-image-picker@0.26.10",
+      "react-native-search-bar@3.4.2"
     ],
     "targetJsDependencies": [
       "react@16.4.1"
